# agentic-design-patterns

./: .gitignore  LICENSE
agentic_patterns/: makefile  pyproject.toml
agentic_patterns/patterns/planner-executor/: README.md  main.py  makefile  planner-executor-nb.ipynb
agentic_patterns/patterns/planner-executor/config/: agents-config.yaml
agentic_patterns/patterns/planner-executor/core/: __init__.py  agent_factory.py  config_loader.py  env.py  pattern.py  registries.py  registry.py  tool_loader.py
agentic_patterns/patterns/planner-executor/core/v1/: agent_factory.py  config_loader.py  pattern.py  registry.py
agentic_patterns/patterns/planner-executor/schema/: __init__.py  executor.py  orchestrator.py  planner.py
agentic_patterns/patterns/planner-executor/tools/generic/: web_search_tool.py
agentic_patterns/patterns/planner-executor/tools/planner_executor/: assign_task.py  orchestrate_tasks.py
agentic_patterns/patterns/worker/: requirements.txt  worker-nb.ipynb
agentic_patterns/patterns/worker-validator/: worker-validator-nb.ipynb
