[project]
name = "agentic-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ayaz Somani", email = "ayaz.somani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "notebook>=7.4.5",
    "pydantic>=2",
]

[project.scripts]
agentic-patterns = "agentic_patterns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
